--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "slack-rust"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["Gompei <shoueigonpei6028@gmail.com>"]
 edition = "2018"
 description = "Slack API Client"
@@ -18,7 +18,8 @@ async-trait = "0.1"
 async-tungstenite = "0.28"
 futures-util = "0.3.17"
 log = "0.4.14"
-rustls = "0.19"
+rustls = "0.23"
+rustls-pemfile = "1.0.0"
 serde =  { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "1.11.0", features = [ "serde_with_macros" ] }
